// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`gen-react > renders the Button wrapper 1`] = `
""use client";

// AUTOGENERATED by gen-react. Do not edit.
// Source: specs/button.yaml

import "@teseor/css/components/button.css";
import type { ComponentProps, ReactNode, Ref } from "react";
import { asElement, mergeClass, type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type ButtonVariant = "solid" | "outline" | "ghost" | "link";

type ButtonIntent = "primary" | "neutral" | "success" | "warning" | "danger" | "info";

type ButtonSize = "sm" | "md" | "lg";

type ButtonAs = "button" | "a";

type ButtonOwnProps = {
  /** Visual style. */
  variant?: ButtonVariant;
  /** Semantic color. */
  intent?: ButtonIntent;
  /** Size scale. */
  size?: Responsive<ButtonSize>;
  /** Polymorphic root element. Defaults to \`button\`; set to \`a\` for link-shaped triggers (paired with \`variant: link\`). */
  as?: ButtonAs;
  /** Disables interaction and applies the disabled visual state. Mapped to the native \`disabled\` attribute on \`button\`, \`aria-disabled="true"\` otherwise. */
  disabled?: boolean;
  /** Shows a spinner in place of the label and disables interaction. The original label stays in the accessibility tree. */
  loading?: boolean;
  /** Icon rendered before the label in the inline direction. Slot size scales with \`size\`. Accepts any node (icon component, SVG, etc.). */
  iconStart?: ReactNode;
  /** Icon rendered after the label in the inline direction. Accepts any node. */
  iconEnd?: ReactNode;
  /** Stretches the button to the inline-size of its container. Responsive so layouts can pin block-width on mobile and shrink to content above. */
  block?: Responsive<boolean>;
  children?: ReactNode;
  ref?: Ref<HTMLElement>;
};

export type ButtonProps = Readonly<
  ButtonOwnProps & Omit<ComponentProps<"button">, keyof ButtonOwnProps>
>;

/**
 * A trigger that performs an action when activated.
 *
 * @example Solid Primary
 * \`\`\`tsx
 * <Button variant="solid" intent="primary">Label</Button>
 * \`\`\`
 *
 * @example Solid Danger Md
 * \`\`\`tsx
 * <Button variant="solid" intent="danger" size="md">Label</Button>
 * \`\`\`
 *
 * @example Outline Neutral
 * \`\`\`tsx
 * <Button variant="outline" intent="neutral">Label</Button>
 * \`\`\`
 */
export function Button(props: ButtonProps) {
  const {
    variant,
    intent,
    size,
    as,
    disabled,
    loading,
    iconStart,
    iconEnd,
    block,
    children,
    ref,
    className,
    ...rest
  } = props;

  const Component = asElement(as ?? "button");
  const isButton = Component === "button";
  const inactive = disabled === true || loading === true;
  const mergedClassName = mergeClass("t-button", className);

  return (
    <Component
      {...rest}
      ref={ref}
      className={mergedClassName}
      data-variant={variant}
      data-intent={intent}
      {...responsiveDataAttrs("size", size)}
      {...responsiveDataAttrs("block", block)}
      data-loading={loading === true ? "true" : undefined}
      disabled={isButton ? inactive : undefined}
      aria-disabled={!isButton && inactive ? "true" : undefined}
      aria-busy={loading === true ? "true" : undefined}
    >
      {iconStart != null ? (
        <span data-button-icon="" data-position="start">
          {iconStart}
        </span>
      ) : null}
      <span data-button-label="">{children}</span>
      {iconEnd != null ? (
        <span data-button-icon="" data-position="end">
          {iconEnd}
        </span>
      ) : null}
      {loading ? <span data-button-spinner="" aria-hidden="true" /> : null}
    </Component>
  );
}
"
`;

exports[`gen-react > renders the Cluster wrapper with multiple enum-typed props 1`] = `
""use client";

// AUTOGENERATED by gen-react. Do not edit.
// Source: specs/cluster.yaml

import "@teseor/css/components/cluster.css";
import type { ComponentProps, ReactNode, Ref } from "react";
import { mergeClass, type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type ClusterAlign = "start" | "center" | "end" | "stretch" | "baseline";

type ClusterJustify = "start" | "center" | "end" | "between" | "around";

type ClusterOwnProps = {
  /** Spacing between children. Accepts a token suffix from the \`--t-space-*\` scale (\`0\`–\`8\`). */
  gap?: Responsive<string>;
  /** Block-axis alignment of children. */
  align?: Responsive<ClusterAlign>;
  /** Inline-axis distribution of children. */
  justify?: Responsive<ClusterJustify>;
  children?: ReactNode;
  ref?: Ref<HTMLElementTagNameMap["div"]>;
};

export type ClusterProps = Readonly<
  ClusterOwnProps & Omit<ComponentProps<"div">, keyof ClusterOwnProps>
>;

/**
 * A horizontal layout primitive. Wraps children on the inline axis with consistent spacing.
 *
 * @example Gap 3
 * \`\`\`tsx
 * <Cluster gap="3">Label</Cluster>
 * \`\`\`
 *
 * @example Gap 0
 * \`\`\`tsx
 * <Cluster gap="0">Label</Cluster>
 * \`\`\`
 *
 * @example Justify Between
 * \`\`\`tsx
 * <Cluster gap="3" justify="between">Label</Cluster>
 * \`\`\`
 */
export function Cluster(props: ClusterProps) {
  const { gap, align, justify, children, ref, className, ...rest } = props;

  const mergedClassName = mergeClass("t-cluster", className);

  return (
    <div
      {...rest}
      ref={ref}
      className={mergedClassName}
      {...responsiveDataAttrs("gap", gap)}
      {...responsiveDataAttrs("align", align)}
      {...responsiveDataAttrs("justify", justify)}
    >
      {children}
    </div>
  );
}
"
`;

exports[`gen-react > renders the Stack wrapper with an enum-typed prop 1`] = `
""use client";

// AUTOGENERATED by gen-react. Do not edit.
// Source: specs/stack.yaml

import "@teseor/css/components/stack.css";
import type { ComponentProps, ReactNode, Ref } from "react";
import { mergeClass, type Responsive, responsiveDataAttrs } from "./_runtime.ts";

type StackAlign = "start" | "center" | "end" | "stretch";

type StackOwnProps = {
  /** Spacing between children. Accepts a token suffix from the \`--t-space-*\` scale (\`0\`–\`8\`). */
  gap?: Responsive<string>;
  /** Inline-axis alignment of children. */
  align?: Responsive<StackAlign>;
  children?: ReactNode;
  ref?: Ref<HTMLElementTagNameMap["div"]>;
};

export type StackProps = Readonly<StackOwnProps & Omit<ComponentProps<"div">, keyof StackOwnProps>>;

/**
 * A vertical layout primitive. Stacks children on the block axis with consistent spacing.
 *
 * @example Gap 3
 * \`\`\`tsx
 * <Stack gap="3">Label</Stack>
 * \`\`\`
 *
 * @example Gap 0
 * \`\`\`tsx
 * <Stack gap="0">Label</Stack>
 * \`\`\`
 *
 * @example Align Center
 * \`\`\`tsx
 * <Stack gap="4" align="center">Label</Stack>
 * \`\`\`
 */
export function Stack(props: StackProps) {
  const { gap, align, children, ref, className, ...rest } = props;

  const mergedClassName = mergeClass("t-stack", className);

  return (
    <div
      {...rest}
      ref={ref}
      className={mergedClassName}
      {...responsiveDataAttrs("gap", gap)}
      {...responsiveDataAttrs("align", align)}
    >
      {children}
    </div>
  );
}
"
`;

exports[`gen-react > renders the barrel 1`] = `
"// AUTOGENERATED by gen-react. Do not edit.

export { Button, type ButtonProps } from "./Button.tsx";
"
`;

exports[`gen-react > renders the runtime helper 1`] = `
"// AUTOGENERATED by gen-react. Do not edit.

import { type ElementType, type Ref, useEffect, useState } from "react";

const RESPONSIVE_KEYS = ["base", "md", "lg", "xl", "2xl"] as const;

type Breakpoint = (typeof RESPONSIVE_KEYS)[number];

export type Responsive<T> = T | Partial<Record<Breakpoint, T>>;

// matchMedia queries baked from specs/_breakpoints.yaml. Single source.
const BREAKPOINT_QUERIES: Partial<Record<Breakpoint, string>> = {
  md: "(min-width: 48rem)",
  lg: "(min-width: 64rem)",
  xl: "(min-width: 80rem)",
  "2xl": "(min-width: 96rem)",
};

function readActiveBreakpoint(): Breakpoint {
  if (typeof window === "undefined" || typeof window.matchMedia !== "function") return "base";
  for (let i = RESPONSIVE_KEYS.length - 1; i > 0; i--) {
    const key = RESPONSIVE_KEYS[i];
    if (!key) continue;
    const q = BREAKPOINT_QUERIES[key];
    if (q && window.matchMedia(q).matches) return key;
  }
  return "base";
}

/** Reactive active-breakpoint key. Drives \`Responsive<T>\` runtime behavior. */
export function useActiveBreakpoint(): Breakpoint {
  const [bp, setBp] = useState<Breakpoint>(() => readActiveBreakpoint());
  useEffect(() => {
    if (typeof window === "undefined" || typeof window.matchMedia !== "function") return;
    const onChange = () => setBp(readActiveBreakpoint());
    const cleanups: Array<() => void> = [];
    for (const key of RESPONSIVE_KEYS) {
      if (key === "base") continue;
      const q = BREAKPOINT_QUERIES[key];
      if (!q) continue;
      const mql = window.matchMedia(q);
      mql.addEventListener("change", onChange);
      cleanups.push(() => mql.removeEventListener("change", onChange));
    }
    return () => {
      for (const fn of cleanups) fn();
    };
  }, []);
  return bp;
}

/** Resolve a \`Responsive<boolean>\` at the active breakpoint (mobile-first cascade). */
export function isActiveAt(value: unknown, bp: Breakpoint): boolean {
  if (value === true) return true;
  if (value == null || value === false) return false;
  if (typeof value !== "object") return false;
  const obj = value as Partial<Record<Breakpoint, boolean>>;
  const idx = RESPONSIVE_KEYS.indexOf(bp);
  for (let i = idx; i >= 0; i--) {
    const key = RESPONSIVE_KEYS[i];
    if (key && key in obj) return obj[key] === true;
  }
  return false;
}

/** Resolve a \`Responsive<T>\` at the active breakpoint (mobile-first cascade). */
export function resolveResponsive<T>(
  value: Responsive<T> | undefined,
  bp: Breakpoint,
): T | undefined {
  if (value == null) return undefined;
  if (typeof value !== "object" || Array.isArray(value)) return value as T;
  const obj = value as Partial<Record<Breakpoint, T>>;
  const idx = RESPONSIVE_KEYS.indexOf(bp);
  for (let i = idx; i >= 0; i--) {
    const key = RESPONSIVE_KEYS[i];
    if (key && key in obj) return obj[key];
  }
  return undefined;
}

export function responsiveDataAttrs(
  name: string,
  value: unknown,
): Record<string, string | undefined> {
  if (value == null || value === false) return {};
  if (typeof value === "object") {
    // Emit every declared key (including \`false\` at non-base) — the CSS
    // override pattern needs the explicit attribute to match against.
    const obj = value as Record<string, unknown>;
    const out: Record<string, string | undefined> = {};
    for (const key of RESPONSIVE_KEYS) {
      const v = obj[key];
      if (v == null) continue;
      // \`base: false\` has no attribute (absence-of) — emitting "false" would never match.
      if (key === "base" && v === false) continue;
      const attr = key === "base" ? \`data-\${name}\` : \`data-\${name}-\${key}\`;
      out[attr] = v === true ? "true" : v === false ? "false" : String(v);
    }
    return out;
  }
  return { [\`data-\${name}\`]: value === true ? "true" : String(value) };
}

/** Widen a narrow tag-name union back to ElementType so JSX's ref slot isn't pinned. */
export function asElement(value: ElementType): ElementType {
  return value;
}

/** Concatenate the wrapper's root class with a consumer-provided className, space-joined.
 *  Consumer goes last by convention; class attribute order doesn't affect the CSS cascade. */
export function mergeClass(rootClass: string, userClass: string | undefined): string {
  return userClass ? \`\${rootClass} \${userClass}\` : rootClass;
}

/** Compose multiple refs (callback or RefObject) into one React 19 callback ref.
 *  Used when a composite wrapper forwards a consumer ref alongside an
 *  internally-held ref on the same element. Cleanup functions returned by
 *  consumer callback refs are preserved and invoked together. */
export function mergeRefs<T>(
  ...refs: Array<Ref<T> | undefined>
): (node: T | null) => (() => void) | undefined {
  return (node) => {
    const cleanups: Array<() => void> = [];
    for (const ref of refs) {
      if (ref == null) continue;
      if (typeof ref === "function") {
        const result = ref(node);
        if (typeof result === "function") cleanups.push(result);
      } else {
        (ref as { current: T | null }).current = node;
      }
    }
    if (cleanups.length === 0) return;
    return () => {
      for (const cleanup of cleanups) cleanup();
    };
  };
}
"
`;
